[project]
name = "langc-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.1",
    "langchain-nvidia-ai-endpoints>=1.4.1",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "pypdf>=6.13.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
]
